--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
             <span>BORAX</span>
           </div>
           <div class="nav-links">
-            <a href="p3.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="#shop">Shop</a>
             <a href="aboutme.html">About Me</a>
           </div>
