--- a/Signup.html
+++ b/Signup.html
@@ -25,7 +25,7 @@
       <img src="images/logo.jpg" alt="Logo">
       
       
-      <form action="p3.html" method="get">
+      <form action="index.html" method="get">
         <div class="form-group">
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required />
